<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HealthNut</string>
    <string name="get_im">Get Images</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_menu">Main Menu</string>
    <string name="view_today">View Today</string>
    <string name="calendar">Calendar</string>
    <string name="analyze">Analyze</string>
    <string name="social_network">Share</string>
    <string name="title_activity_today">Today</string>
    <string name="todays_nutrition">Today\'s Nutrition</string>
    <string name="exercise">Exercise</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="other">Other</string>
    <string name="add_food">+Food</string>
    <string name="add_exercise">+Exercise</string>
    <string name="title_activity_add_food">AddFood</string>
    <string name="add_notes">Calories</string>
    <string name="camera">Camera</string>
    <string name="title_activity_add_exercise">AddExercise</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="summary">Summary</string>
    <string name="title_activity_analyze">Analyze</string>
    <string name="carbs">Food Details for today:</string>
    <string name="protein">Exercise Details for today:</string>
    <string name="title_activity_social_network">SocialNetwork</string>
    <string name="post">Post</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="title_activity_nfc">NFC</string>
    <string name="title_activity_get_images">GetImages</string>

</resources>
