<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.healthnut.SocialNetwork"
    tools:ignore="MergeRootFrame" >

    <com.example.support.CenteringHorizontalScrollView
                android:id="@+id/HSVImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                >

                <LinearLayout
                    android:id="@+id/linearImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >
                </LinearLayout>
            </com.example.support.CenteringHorizontalScrollView>
    
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="42dp"
        android:text="@string/social_network"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/HSVImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="128dp"
        android:text="@string/post" />

    <Button
        android:id="@+id/main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/main_menu" />



    <TextView
        android:id="@+id/mTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:text="TextView" />

</RelativeLayout>
