<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="add.AddFood"
    tools:ignore="MergeRootFrame" >


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/add_food"
        android:background="@color/button_text"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/food_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:hint="@string/add_food"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/food_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/food_input"
        android:layout_below="@+id/food_input"
        android:layout_marginTop="52dp"
        android:hint="@string/add_notes"
        android:inputType="number"
        android:ems="10" />

    <Button
        android:id="@+id/food_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_notes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@color/button_text"
        android:textColor="@android:color/white"
        android:text="@string/add_food" />

    <Button
        android:id="@+id/main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_add"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@color/button_text"
        android:textColor="@android:color/white"
        android:text="@string/main_menu" />

    <ImageView
        android:id="@+id/mImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_menu"
        android:layout_below="@+id/main_menu"
        android:src="@drawable/abc_ab_bottom_solid_dark_holo" />

</RelativeLayout>
